--- a/cabinet/index.html
+++ b/cabinet/index.html
@@ -5,7 +5,7 @@
     <link
       rel="icon"
       type="image/svg+xml"
-      href="/vite.svg"
+      href="/helm.svg"
     />
     <link
       href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,400;1,700&display=swap"
@@ -19,7 +19,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>Vite + Vue + TS</title>
+    <title>Maritime dictionary app</title>
   </head>
   <body>
     <div id="app"></div>
